# jmlist-svn

source/releases/0.0.1/: Makefile.am
source/releases/0.0.1/lib/: Makefile.am
source/releases/0.0.1/src/: Makefile.am  common.h  directory.h  file-mpeg-id3v2.c  file-mpeg-id3v2.h  file-mpeg.c  file.c  file.h
source/releases/0.0.2/: ChangeLog  NEWS  configure.ac
source/releases/0.0.2/src/: Makefile.am  directory.c  file-mpeg-id3v2.h  file-mpeg.h  main.c  style.c  system.h
source/releases/0.0.2/styles/: text-simple.xsl
source/releases/0.0.2/styles/xhtml-collapsible-xsl/: button-base.xcf  xhtml-collapsible.js
source/releases/0.1.0/: AUTHORS  ChangeLog  README  configure.ac
source/releases/0.1.0/doc/src/: readme.xml
source/releases/0.1.0/lib/popt/: Makefile.am
source/releases/0.1.0/src/: Makefile.am  file-mpeg-id3v2.c  file-mpeg-id3v2.h  file-mpeg.c  file-mpeg.h  file-vorbis.c  file-vorbis.h  main.c  style.c  style.h  system.h
source/releases/0.1.0/styles/: text-simple.xsl  xhtml-collapsible-info.xml  xhtml-collapsible.xsl
source/trunk/: AUTHORS  ChangeLog  Doxyfile  Makefile.am  configure.ac  configure.svn
source/trunk/doc/: Makefile.am  man-jmlist.xml  manpages.xml
source/trunk/doc/src/: man-jmlist.xml
source/trunk/lib/: Makefile.am
source/trunk/lib/popt/: README
source/trunk/m4/: id3lib.m4
source/trunk/src/: Makefile.am  common.h  directory.c  directory.h  file-mpeg-id3v1.c  file-mpeg-id3v1.h  file-mpeg-id3v2.c  file-mpeg-id3v2.h  file-mpeg.c  file-mpeg.h  file-vorbis.c  file-vorbis.h  file.c  file.h  main.c  main.h  style.c  style.h  system.h
source/trunk/styles/: Makefile.am  text-simple-info.xml  text-simple.xsl  xhtml-collapsible-info.xml  xhtml-collapsible.xsl
source/trunk/styles/xhtml-collapsible-xsl/: default.css
web/trunk/: default.css  docs.php  download.php  index.php  ml.php  screenshots.php
web/trunk/img/src/: jmlist-logo.xcf
web/trunk/site/: base.inc.php  html.inc.php
web/trunk/site/Net_UserAgent/: Detect.php
