## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.8

stylesdir = $(pkgdatadir)/styles

nobase_dist_styles_DATA = \
	text-simple.xsl \
	text-simple-info.xml \
	xhtml-collapsible.xsl \
	xhtml-collapsible-info.xml \
	xhtml-collapsible-xsl/button-base.xcf \
	xhtml-collapsible-xsl/default.css \
	xhtml-collapsible-xsl/file.png \
	xhtml-collapsible-xsl/folder.png \
	xhtml-collapsible-xsl/minus.png \
	xhtml-collapsible-xsl/plus.png \
	xhtml-collapsible-xsl/xhtml-collapsible.js
